--- a/views/login.hbs
+++ b/views/login.hbs
@@ -104,7 +104,7 @@
       New to Pulse? <a href="register">Sign Up Now!</a>
     </div>
       <div class="ui message">
-          Forgot your password? <a href="forgot">Reset it</a>
+          Forgot your password? <a href="/forgot">Reset it</a>
       </div>
   </div>
 </div>
